--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -12,27 +12,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-05 Fri 10:37]
+#+CAPTION: Clock summary at [2019-04-05 Fri 11:44]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *65:11* |       |       | 100.0 |
+| *Total time*                                              | *66:15* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 65:11   |       |       | 100.0 |
-| Active                                                    |         | 65:11 |       | 100.0 |
+| Stories                                                   | 66:15   |       |       | 100.0 |
+| Active                                                    |         | 66:15 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  1:47 |   2.7 |
-| Sprint and product backlog grooming                       |         |       |  7:07 |  10.9 |
-| Create a video demo for the previous sprint's features    |         |       |  3:11 |   4.9 |
+| Sprint and product backlog grooming                       |         |       |  7:07 |  10.7 |
+| Create a video demo for the previous sprint's features    |         |       |  3:11 |   4.8 |
 | Fix issues with emacs                                     |         |       |  2:42 |   4.1 |
-| Create a basic "project plan"                             |         |       |  2:08 |   3.3 |
-| Simplify qualified name                                   |         |       |  3:39 |   5.6 |
-| Rename "language" to "technical space"                    |         |       |  7:22 |  11.3 |
+| Create a basic "project plan"                             |         |       |  2:08 |   3.2 |
+| Simplify qualified name                                   |         |       |  3:39 |   5.5 |
+| Rename "language" to "technical space"                    |         |       |  7:22 |  11.1 |
 | Add intrinsic technical space ownership                   |         |       |  1:12 |   1.8 |
-| Integrate report-ci with dogen                            |         |       |  2:09 |   3.3 |
-| Promote extraction entities to meta-model elements        |         |       | 30:56 |  47.5 |
+| Integrate report-ci with dogen                            |         |       |  2:09 |   3.2 |
+| Promote extraction entities to meta-model elements        |         |       | 30:56 |  46.7 |
 | Move all utility formatters from extraction to generation |         |       |  0:27 |   0.7 |
-| Remove annotations from stitch templates                  |         |       |  1:17 |   2.0 |
-| Supply decorations as a sttich parameter                  |         |       |  1:14 |   1.9 |
+| Remove annotations from stitch templates                  |         |       |  1:17 |   1.9 |
+| Supply decorations as a stitch parameter                  |         |       |  2:18 |   3.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -513,8 +513,9 @@ applied as variables. They should be composed externally with access
 to data from the model element. Thus we then need a way to associate
 includes with model elements. This is captured as a separate story.
 
-*** STARTED Supply decorations as a sttich parameter                  :story:
+*** STARTED Supply decorations as a stitch parameter                  :story:
      :LOGBOOK:
+     CLOCK: [2019-04-05 Fri 10:38]--[2019-04-05 Fri 11:42] =>  1:04
      CLOCK: [2019-04-05 Fri 10:24]--[2019-04-05 Fri 10:37] =>  0:13
      CLOCK: [2019-04-05 Fri 10:08]--[2019-04-05 Fri 10:23] =>  0:15
      CLOCK: [2019-04-05 Fri 10:02]--[2019-04-05 Fri 10:07] =>  0:05
