--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-05 Fri 20:46]
+#+CAPTION: Clock summary at [2019-04-05 Fri 21:21]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *73:23* |       |       | 100.0 |
+| *Total time*                                              | *73:57* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 73:23   |       |       | 100.0 |
-| Active                                                    |         | 73:23 |       | 100.0 |
+| Stories                                                   | 73:57   |       |       | 100.0 |
+| Active                                                    |         | 73:57 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  1:47 |   2.4 |
-| Sprint and product backlog grooming                       |         |       |  7:07 |   9.7 |
+| Sprint and product backlog grooming                       |         |       |  7:07 |   9.6 |
 | Create a video demo for the previous sprint's features    |         |       |  3:11 |   4.3 |
 | Fix issues with emacs                                     |         |       |  2:42 |   3.7 |
 | Create a basic "project plan"                             |         |       |  2:08 |   2.9 |
-| Simplify qualified name                                   |         |       |  3:39 |   5.0 |
+| Simplify qualified name                                   |         |       |  3:39 |   4.9 |
 | Rename "language" to "technical space"                    |         |       |  7:22 |  10.0 |
 | Add intrinsic technical space ownership                   |         |       |  1:12 |   1.6 |
 | Integrate report-ci with dogen                            |         |       |  2:09 |   2.9 |
-| Promote extraction entities to meta-model elements        |         |       | 35:53 |  48.9 |
+| Promote extraction entities to meta-model elements        |         |       | 36:27 |  49.3 |
 | Move all utility formatters from extraction to generation |         |       |  0:27 |   0.6 |
 | Remove annotations from stitch templates                  |         |       |  1:17 |   1.7 |
 | Supply decorations as a stitch parameter                  |         |       |  4:29 |   6.1 |
@@ -341,6 +341,7 @@ submitted a PR. Help him integrate it with Dogen.
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
+    CLOCK: [2019-04-05 Fri 20:47]--[2019-04-05 Fri 21:21] =>  0:34
     CLOCK: [2019-04-05 Fri 20:41]--[2019-04-05 Fri 20:46] =>  0:05
     CLOCK: [2019-04-05 Fri 20:15]--[2019-04-05 Fri 20:20] =>  0:05
     CLOCK: [2019-04-05 Fri 19:42]--[2019-04-05 Fri 20:14] =>  0:32
