--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-06 Sat 20:19]
+#+CAPTION: Clock summary at [2019-04-06 Sat 20:27]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *80:16* |       |       | 100.0 |
+| *Total time*                                              | *80:23* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 80:16   |       |       | 100.0 |
-| Active                                                    |         | 80:16 |       | 100.0 |
+| Stories                                                   | 80:23   |       |       | 100.0 |
+| Active                                                    |         | 80:23 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  1:47 |   2.2 |
 | Sprint and product backlog grooming                       |         |       |  7:14 |   9.0 |
 | Create a video demo for the previous sprint's features    |         |       |  3:11 |   4.0 |
@@ -28,9 +28,9 @@
 | Simplify qualified name                                   |         |       |  3:39 |   4.5 |
 | Rename "language" to "technical space"                    |         |       |  7:22 |   9.2 |
 | Add intrinsic technical space ownership                   |         |       |  1:12 |   1.5 |
-| Promote extraction entities to meta-model elements        |         |       | 37:25 |  46.6 |
+| Promote extraction entities to meta-model elements        |         |       | 37:25 |  46.5 |
 | Integrate report-ci with dogen                            |         |       |  2:09 |   2.7 |
-| Move all utility formatters from extraction to generation |         |       |  5:41 |   7.1 |
+| Move all utility formatters from extraction to generation |         |       |  5:48 |   7.2 |
 | Remove annotations from stitch templates                  |         |       |  1:17 |   1.6 |
 | Supply decorations as a stitch parameter                  |         |       |  4:29 |   5.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
@@ -492,6 +492,7 @@ submitted a PR. Help him integrate it with Dogen.
 
 *** STARTED Move all utility formatters from extraction to generation :story:
     :LOGBOOK:
+    CLOCK: [2019-04-06 Sat 20:20]--[2019-04-06 Sat 20:27] =>  0:07
     CLOCK: [2019-04-06 Sat 20:12]--[2019-04-06 Sat 20:19] =>  0:07
     CLOCK: [2019-04-06 Sat 19:59]--[2019-04-06 Sat 20:11] =>  0:12
     CLOCK: [2019-04-06 Sat 19:41]--[2019-04-06 Sat 19:58] =>  0:17
