--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-24 Wed 15:44]
+#+CAPTION: Clock summary at [2019-04-24 Wed 15:55]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *14:08* |       |      | 100.0 |
+| *Total time*                                           | *14:18* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 14:08   |       |      | 100.0 |
-| Active                                                 |         | 14:08 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 2:40 |  18.9 |
+| Stories                                                | 14:18   |       |      | 100.0 |
+| Active                                                 |         | 14:18 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 2:40 |  18.6 |
 | Sprint and product backlog grooming                    |         |       | 0:22 |   2.6 |
-| Create a video demo for the previous sprint's features |         |       | 1:55 |  13.6 |
+| Create a video demo for the previous sprint's features |         |       | 1:55 |  13.4 |
 | Read variability papers                                |         |       | 1:04 |   7.5 |
-| Implement variability model                            |         |       | 8:07 |  57.4 |
+| Implement variability model                            |         |       | 8:17 |  57.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -174,6 +174,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-24 Wed 15:45]--[2019-04-24 Wed 15:55] =>  0:10
     CLOCK: [2019-04-24 Wed 15:14]--[2019-04-24 Wed 15:44] =>  0:30
     CLOCK: [2019-04-24 Wed 14:16]--[2019-04-24 Wed 14:55] =>  0:39
     CLOCK: [2019-04-24 Wed 13:44]--[2019-04-24 Wed 14:15] =>  0:31
