--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-26 Fri 13:35]
+#+CAPTION: Clock summary at [2019-04-26 Fri 13:45]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *29:24* |       |       | 100.0 |
+| *Total time*                                           | *29:33* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 29:24   |       |       | 100.0 |
-| Active                                                 |         | 29:24 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   9.1 |
+| Stories                                                | 29:33   |       |       | 100.0 |
+| Active                                                 |         | 29:33 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   9.0 |
 | Sprint and product backlog grooming                    |         |       |  0:42 |   2.4 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   6.5 |
 | Read variability papers                                |         |       |  1:04 |   3.6 |
-| Implement variability model                            |         |       | 23:03 |  78.4 |
+| Implement variability model                            |         |       | 23:12 |  78.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,6 +190,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-26 Fri 13:36]--[2019-04-26 Fri 13:45] =>  0:09
     CLOCK: [2019-04-26 Fri 13:14]--[2019-04-26 Fri 13:35] =>  0:21
     CLOCK: [2019-04-26 Fri 11:50]--[2019-04-26 Fri 12:10] =>  0:20
     CLOCK: [2019-04-26 Fri 11:36]--[2019-04-26 Fri 11:49] =>  0:13
