--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-26 Fri 16:14]
+#+CAPTION: Clock summary at [2019-04-26 Fri 16:22]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *30:45* |       |       | 100.0 |
+| *Total time*                                           | *30:52* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 30:45   |       |       | 100.0 |
-| Active                                                 |         | 30:45 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   8.7 |
+| Stories                                                | 30:52   |       |       | 100.0 |
+| Active                                                 |         | 30:52 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   8.6 |
 | Sprint and product backlog grooming                    |         |       |  0:42 |   2.3 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   6.2 |
 | Read variability papers                                |         |       |  1:04 |   3.5 |
-| Implement variability model                            |         |       | 24:24 |  79.3 |
+| Implement variability model                            |         |       | 24:31 |  79.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,6 +190,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-26 Fri 16:15]--[2019-04-26 Fri 16:22] =>  0:07
     CLOCK: [2019-04-26 Fri 16:03]--[2019-04-26 Fri 16:14] =>  0:11
     CLOCK: [2019-04-26 Fri 13:46]--[2019-04-26 Fri 14:47] =>  1:01
     CLOCK: [2019-04-26 Fri 13:36]--[2019-04-26 Fri 13:45] =>  0:09
