--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-26 Fri 16:40]
+#+CAPTION: Clock summary at [2019-04-26 Fri 17:29]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *31:08* |       |       | 100.0 |
+| *Total time*                                           | *31:55* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 31:08   |       |       | 100.0 |
-| Active                                                 |         | 31:08 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   8.6 |
+| Stories                                                | 31:55   |       |       | 100.0 |
+| Active                                                 |         | 31:55 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   8.4 |
 | Sprint and product backlog grooming                    |         |       |  0:42 |   2.2 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   6.2 |
-| Read variability papers                                |         |       |  1:04 |   3.4 |
-| Implement variability model                            |         |       | 24:47 |  79.6 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   6.0 |
+| Read variability papers                                |         |       |  1:04 |   3.3 |
+| Implement variability model                            |         |       | 25:34 |  80.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,6 +190,8 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-26 Fri 17:00]--[2019-04-26 Fri 17:29] =>  0:29
+    CLOCK: [2019-04-26 Fri 16:41]--[2019-04-26 Fri 16:59] =>  0:18
     CLOCK: [2019-04-26 Fri 16:31]--[2019-04-26 Fri 16:40] =>  0:09
     CLOCK: [2019-04-26 Fri 16:23]--[2019-04-26 Fri 16:30] =>  0:07
     CLOCK: [2019-04-26 Fri 16:15]--[2019-04-26 Fri 16:22] =>  0:07
